Fix for incorrect use of DNA_struct_find_nr

Patch T38290 by ldo (Lawrence D'Oliveiro)